fixed get in touch btn width on mobile

--- a/css/layout/_navbar.scss
+++ b/css/layout/_navbar.scss
@@ -125,6 +125,10 @@
         max-width: 100%;
         width: 100%;
         font-size: 1rem;
+
+        &.show {
+          width: 100%;
+        }
       }
     }
 
